# skill-creator

./: .gitignore  README.md  docker-compose.yaml
backend/: Dockerfile  Makefile  config.yaml  config.yaml.example  pyproject.toml
backend/skills/custom/mysql-test-1-sql/: SKILL.md  config.json
backend/skills/custom/mysql-test-2-sql/: SKILL.md  config.json
backend/skills/custom/mysql-test-sql/: SKILL.md  plan.md  (+1 more)
backend/skills/templates/: api-client.yaml  code-review.yaml  data-analyst.yaml  doc-writer.yaml  sql-assistant.yaml
backend/src/: main.py
backend/src/agent/: core.py  prompt.py  tools.py
backend/src/api/: chat.py  memory.py  skill_chat.py  skill_creator.py  skill_templates.py  skills.py  sql_assistant.py  workspace.py
backend/src/config/: settings.py
backend/src/db/: database.py  models.py  repository.py
backend/src/memory/: injector.py  prompt.py  queue.py  store.py  updater.py
backend/src/skill/: creator.py  evaluator.py  loader.py  manager.py  runtime_config.py  template_loader.py  template_manager.py  template_types.py  types.py  validator.py
backend/src/sql_assistant/: connectors.py  safety.py  tools.py
backend/src/workspace/: files.py  manager.py
backend/tests/: conftest.py  test_agent_core.py  test_agent_prompt.py  test_api_chat.py  test_api_memory.py  test_api_skills.py  test_api_workspace.py  test_config.py  test_database.py  test_memory_injector.py  test_memory_store.py  test_memory_updater.py  test_skill_chat.py  test_skill_loader.py  test_skill_manager.py  test_skill_templates.py  test_sql_assistant.py  test_workspace.py
(+43 files in other folders)
